style.css
/* Styles */
:root {
  /* colors */
  --white: #fff;
  --yellow: #E8C91A;
  --light-yellow: #FFDD1C;
  --grey: #45454C;
  --light-grey: #7D7D8A;
  --very-light-grey: #EBEFFF;
}

body {
  background-color: #f5f5f5;
  color: var(--white);
  font-family: 'Cardo', serif;
}

i {
  color: var(--grey);
}

a {
  transition: all 0.2s ease-in-out;
}

a:hover, .live:hover {
  color: var(--yellow);
  text-decoration: none;
  transition: all 0.2s ease-in-out;
}

.box-shadow,
.paralax-mf {
  box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
}

.box-shadow-a,
.button:hover {
  box-shadow: 0 0 0 4px var(--very-light-grey);
}

.paralax-mf {
  position: relative;
  padding: 8rem 0;
}


/* Title Left */
.title-box-2 {
  margin-bottom: 3rem;
}

.title-left {
  font-size: 2rem;
  position: relative;
}

.title-left:before {
  content: '';
  position: absolute;
  height: 3px;
  background-color: var(--light-grey);
  width: 100px;
  bottom: -12px;
}

/* Box */
.box-shadow-full {
  padding: 3rem 1.25rem;
  position: relative;
  background-color: var(--white);
  margin-bottom: 3rem;
  z-index: 2;
  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.2);
}

/* Contact Us */
#contact {
  background-color: var(--light-grey);
}

.socials {
  padding: 1.5rem 0;
}

.socials ul li {
  display: inline-block;
}

.socials .ico-circle {
  height: 40px;
  width: 40px;
  font-size: 1.7rem;
  border-radius: 50%;
  line-height: 1.4;
  margin: 0 15px 0 0;
  box-shadow: 0 0 0 3px var(--yellow);
  transition: all 500ms ease;
}

.socials .ico-circle:hover {
  background-color: var(--very-light-grey);
  color: var(--white);
  box-shadow: 0 0 0 3px var(--light-grey);
  transition: all 500ms ease;
}

/* Ul resect */
.socials ul,
.box-comments .list-comments {
  list-style: none;
  padding-left: 0;
  margin-bottom: 0;
}

/* Icon Circle */
.ico-circle {
  height: 100px;
  width: 100px;
  font-size: 2rem;
  border-radius: 50%;
  line-height: 1.55;
  margin: 0 auto;
  text-align: center;
  box-shadow: 0 0 0 10px var(--light-grey);
  display: block;
}

i.fab, i.far {
  vertical-align: middle;
}

/* Back to Top */
.back-to-top {
  position: fixed;
  display: none;
  background: var(--yellow);
  color: var(--very-light-grey);
  width: 44px;
  height: 44px;
  text-align: center;
  line-height: 1;
  font-size: 16px;
  border-radius: 50%;
  right: 15px;
  bottom: 15px;
  z-index: 11;
}

.back-to-top i {
  padding-top: 12px;
  color: var(--white);
}

/* Preloader */
#preloader {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 9999;
  overflow: hidden;
  background: var(--light-grey);
}

#preloader:before {
  content: "";
  position: fixed;
  top: calc(50% - 30px);
  left: calc(50% - 30px);
  border: 6px solid var(--white);
  border-top: 6px solid var(--yellow);
  border-radius: 50%;
  width: 60px;
  height: 60px;
  -webkit-animation: animate-preloader 1s linear infinite;
  animation: animate-preloader 1s linear infinite;
}

@-webkit-keyframes animate-preloader {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animate-preloader {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

/* NavBar */
#home-logo {
  max-height: 5rem;
}

.navbar-b {
  transition: all .5s ease-in-out;
  background-color: rgba(18,16,17, 0.6);
  padding: 0 !important;
}

.navbar-b.navbar-reduce {
  box-shadow: 0px 5px 9px 0px rgba(0, 0, 0, 0.06);
}

.navbar-b.navbar-trans .nav-item,
.navbar-b.navbar-reduce .nav-item {
  position: relative;
  padding-right: 10px;
  padding-left: 0;
}

.navbar-b.navbar-trans .nav-link,
.navbar-b.navbar-reduce .nav-link {
  color: var(--white);
  text-transform: uppercase;
  font-weight: 600;
}

.navbar-b.navbar-trans .nav-link:before,
.navbar-b.navbar-reduce .nav-link:before {
  content: '';
  position: absolute;
  margin-left: 0px;
  width: 0%;
  bottom: 0;
  left: 0;
  height: 2px;
  transition: all 500ms ease;
}

.navbar-b.navbar-trans .nav-link:hover,
.navbar-b.navbar-reduce .nav-link:hover {
  color: var(--grey);
}

.navbar-b.navbar-trans .nav-link:hover:before,
.navbar-b.navbar-reduce .nav-link:hover:before {
  width: 35px;
}

.navbar-b.navbar-trans .show > .nav-link:before,
.navbar-b.navbar-trans .active > .nav-link:before,
.navbar-b.navbar-trans .nav-link.show:before,
.navbar-b.navbar-trans .nav-link.active:before,
.navbar-b.navbar-reduce .show > .nav-link:before,
.navbar-b.navbar-reduce .active > .nav-link:before,
.navbar-b.navbar-reduce .nav-link.show:before,
.navbar-b.navbar-reduce .nav-link.active:before {
  width: 35px;
}

.navbar-b.navbar-trans .nav-link:before {
  background-color: var(--white);
}

.navbar-b.navbar-trans .nav-link:hover,
.navbar-b.navbar-trans .show > .nav-link,
.navbar-b.navbar-trans .active > .nav-link,
.navbar-b.navbar-trans .nav-link.show,
.navbar-b.navbar-trans .nav-link.active {
  color: var(--white);
}

.navbar-b.navbar-reduce {
  transition: all .5s ease-in-out;
  background-color: var(--grey);
  padding: 15px 0;
}

.navbar-b.navbar-reduce .nav-link {
  color: var(--very-light-grey);
}

.navbar-b.navbar-reduce .nav-link:before {
  background-color: var(--light-yellow);
}

.navbar-b.navbar-reduce .nav-link:hover,
.navbar-b.navbar-reduce .show > .nav-link,
.navbar-b.navbar-reduce .active > .nav-link,
.navbar-b.navbar-reduce .nav-link.show,
.navbar-b.navbar-reduce .nav-link.active {
  color: var(--light-yellow);
}

.navbar-b.navbar-reduce .navbar-toggler span {
  background-color: var(--grey);
}

.navbar-b .navbar-nav .dropdown-item.show .dropdown-menu,
.navbar-b .dropdown.show .dropdown-menu,
.navbar-b .dropdown-btn.show .dropdown-menu {
  -webkit-transform: translate3d(0px, 0px, 0px);
  transform: translate3d(0px, 0px, 0px);
  visibility: visible !important;
}

.navbar-b .dropdown-menu {
  margin: 1.12rem 0 0;
  border-radius: 0;
}

.navbar-b .dropdown-menu .dropdown-item {
  padding: .7rem 1.7rem;
  transition: all 500ms ease;
}

.navbar-b .dropdown-menu .dropdown-item:hover {
  background-color: var(--light-grey);
  color: var(--white);
  transition: all 500ms ease;
}

.navbar-b .dropdown-menu .dropdown-item.active {
  background-color: var(--light-grey);
}

.navbar-toggler {
  position: relative;
}

.navbar-toggler:focus,
.navbar-toggler:active {
  outline: 0;
}

.navbar-toggler span {
  display: block;
  background-color: var(--white);
  height: 3px;
  width: 25px;
  margin-top: 4px;
  margin-bottom: 4px;
  -webkit-transform: rotate(0deg);
  transform: rotate(0deg);
  left: 0;
  opacity: 1;
}

.navbar-toggler span:nth-child(1),
.navbar-toggler span:nth-child(3) {
  transition: -webkit-transform .35s ease-in-out;
  transition: transform .35s ease-in-out;
  transition: transform .35s ease-in-out, -webkit-transform .35s ease-in-out;
}

/* Intro */
.slide-bg {
  background-image: url("./assets/images/home-bg-slide/bg-1.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-position: center center;
  backface-visibility: hidden;
  animation: slideBg 60s linear infinite 0s;
  animation-timing-function: ease-in-out;
}

@keyframes slideBg {
  0% {
    background-image: url("./assets/images/home-bg-slide/bg-1.jpg");
  }
  12.5% {
    background-image: url("./assets/images/home-bg-slide/bg-2.jpg");
  }
  25% {
    background-image: url("./assets/images/home-bg-slide/bg-3.jpg");
  }
  37.5% {
    background-image: url("./assets/images/home-bg-slide/bg-4.jpg");
  }
  50% {
    background-image: url("./assets/images/home-bg-slide/bg-5.jpg");
  }
  62.5% {
    background-image: url("./assets/images/home-bg-slide/bg-6.jpg");
  }
  75% {
    background-image: url("./assets/images/home-bg-slide/bg-7.jpg");
  }
  87.5% {
    background-image: url("./assets/images/home-bg-slide/bg-8.jpg");
  }
  100% {
    background-image: url("./assets/images/home-bg-slide/bg-1.jpg");
  }
}

.intro {
  height: 370vh;
  position: relative;
  color: var(--white);
  background-color: rgba(18,16,17, 0.6)
}

.intro-content {
  text-align: center;
  padding-top: 23rem;
  margin-bottom: 3rem;
}

.intro-title {
  text-shadow: 1px 1px 3px var(--yellow);
  font-weight: 600;
  font-size: 4.5rem;
}

.intro-subtitle {
  font-size: 2.5rem;
  padding: 3rem 20rem 0;
}

#home .intro-subtitle {
  padding: 3rem 10rem 0;
  font-size: 3rem;
}

#event .intro-title,
#about .intro-title {
  font-size: 3.5rem;
}

#event .intro-subtitle,
#about .intro-subtitle {
  padding-top: 1rem;
}

/* Event Details Carousel */
#event-carousel {
  margin: 20rem 20rem 0;
  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.3), 0 2px 5px 0 rgba(0, 0, 0, 0.6);
}

/* Packages */
#packages {
  color: var(--grey);
  margin: 5rem 0;
}

.package-card {
  height: 100%;
}

.about-mf .box-shadow-full {
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.about-mf .about-img {
  margin-bottom: 2rem;
}

.about-mf .about-img img {
  margin-left: 10px;
}

.registration-link {
  margin: 1.25rem;
  background-color: var(--yellow);
  color: var(--grey);
}

#porta-potty-disclaimer {
  font-size: 0.8rem;
}

/* Vendors */
#vendors {
  color: var(--grey);
  font-size: 2.5rem;
  padding: 20rem 0;
}

/* Contact */
.footer-paralax {
  padding: 0;
}

.contact-mf {
  margin-top: 4rem;
}

/* Button Plus Media Queries*/
@media (min-width: 767px) {
  .about-mf .box-pl2 {
    margin-top: 3rem;
    padding-left: 0rem;
  }

  .contact-mf .box-pl2 {
    margin-top: 3rem;
    padding-left: 0rem;
  }
}

@media (min-width: 768px) {
  .box-shadow-full {
    padding: 3rem;
  }

  .navbar-b.navbar-trans .nav-item,
  .navbar-b.navbar-reduce .nav-item {
    padding-left: 10px;
  }

  .navbar-b.navbar-trans .nav-link:before,
  .navbar-b.navbar-reduce .nav-link:before {
    margin-left: 18px;
  }
}

@media (max-width: 1024px) {
  .bg-image {
    background-attachment: scroll;
  }
}

@media (max-width: 768px) {
  .back-to-top {
    bottom: 15px;
  }
}

